<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TableRow>

        <ImageButton
            android:id="@+id/btnComputer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:contentDescription="@string/title_computer"
            android:src="@drawable/home_computer" />

        <TextView
            android:id="@+id/tvComputer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_computer"
            android:textSize="23sp" />
    </TableRow>

    <TableRow>

        <ImageButton
            android:id="@+id/btnLights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:contentDescription="@string/title_lights"
            android:src="@drawable/home_light" />

        <TextView
            android:id="@+id/tvLights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_lights"
            android:textSize="23sp" />
    </TableRow>

    <TableRow>

        <ImageButton
            android:id="@+id/btnTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:contentDescription="@string/title_tv"
            android:src="@drawable/home_tv" />

        <TextView
            android:id="@+id/tvTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_tv"
            android:textSize="23sp" />
    </TableRow>

    <TableRow>

        <ImageButton
            android:id="@+id/btnRobots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:contentDescription="@string/title_robots"
            android:src="@drawable/home_robot" />

        <TextView
            android:id="@+id/tvRobots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_robots"
            android:textSize="23sp" />
    </TableRow>

    <TableRow>

        <ImageButton
            android:id="@+id/btnHifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:contentDescription="@string/title_hifi"
            android:src="@drawable/home_hifi" />

        <TextView
            android:id="@+id/tvHifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_hifi"
            android:textSize="23sp" />
    </TableRow>

</TableLayout>